fix: Nav Drawer appears behind Scrim

--- a/packages/skcom-css/src/components/nav-drawer.scss
+++ b/packages/skcom-css/src/components/nav-drawer.scss
@@ -6,6 +6,7 @@
 ////
 
 .skc-nav-drawer {
+  z-index: 90;
   display: flex;
   overflow-y: auto;
   flex-direction: column;
